--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ k8s-openapi = { version = "0.24.0", features = ["latest"] }
 base64 = "0.22.1"
 serde_json = "1.0.137"
 dotenv = "0.15.0"
+chrono = "0.4"
