update README and job example: adjust cronjob schedule and history limits

--- a/examples/job.example.yaml
+++ b/examples/job.example.yaml
@@ -16,8 +16,9 @@ metadata:
   name: ecr-registry-helper
   namespace: default
 spec:
-  schedule: "* * * * *"
-  successfulJobsHistoryLimit: 3
+  schedule: "0 */9 * * *" # every 9 hours
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
   suspend: false
   jobTemplate:
     spec:
